# OpenSet

./: CMakeLists.txt  OpenSet.cpp  README.md  format_script.sh
engine/: Card.cpp  Card.hpp  CardManager.cpp  CardManager.hpp  CardProperties.cpp  CardProperties.hpp
test/: CMakeLists.txt  testCardManager.cpp  testWindow.cpp
visuals/: Window.cpp  Window.hpp
